...
    <string name="app_name">TreasureHunt_front_end</string>
    <string name="title_activity_maps">Map</string>
    <string name="congratulations_you_won">Congratulations you WON!</string>
    <string name="test">test</string>
    <string name="you_found_the_treasure">You found the Treasure</string>
    <string name="congratulations">Congratulations</string>
    <string name="register_here">Register here</string>
    <string name="registration_rules">Registration rules</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="login_here">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
...
