...
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="456dp"
        android:text="LeaderBoard" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="166dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"

        android:icon="@android:drawable/ic_menu_preferences"
        android:iconTint="@color/black"
        android:text="Settings"
        android:textColor="@color/black"
        app:icon="@android:drawable/ic_menu_manage"
        app:iconTint="#000000" />

    <Button
        android:layout_width="wrap_content"
...
